# shared-queues

./: CMakeLists.txt  README
include/shared_queues/: callable.h  processor.h  thread_pool.h  thread_safe_queue.h
test/: CMakeLists.txt  shared_queues_test.cpp
